--- a/WebAuthenticationDemo/WebAuthenticationDemo/appsettings.json
+++ b/WebAuthenticationDemo/WebAuthenticationDemo/appsettings.json
@@ -11,5 +11,9 @@
     "Issuer": "localhost",
     "Audience": "localhost",
     "SecretKey": "my secret my secret my secret my secret"
-  }
+  },
+  "AllowedDomains": [
+    "localhost",
+    "b348e6351995.ngrok.io"
+  ]
 }
